workspace = { members = ["downloadlib"] }
[package]
name = "fujihoarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.23", features=["rustls"]}
tokio = { version = "1.35.1", features = ["full"] }
downloadlib = { path = "./downloadlib" }
hex = "0.4.3"
